Create handler for update user profile
